fix: remove mongodb auth

--- a/product-service/.env.product-service
+++ b/product-service/.env.product-service
@@ -6,6 +6,6 @@ DEBUG=true
 LOG_LEVEL=info
 
 # Configuração do MongoDB
-MONGO_URI=mongodb://product_service:product_password@mongodb:27017/ecommerce
+MONGO_URI=mongodb://localhost:27017/ecommerce
 MONGO_CONNECTION_TIMEOUT=10
 MONGO_MAX_POOL_SIZE=20
