--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mongodb:
     image: mongo:6.0
@@ -7,8 +5,6 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
       MONGO_INITDB_DATABASE: ecommerce
     volumes:
       - mongodb_data:/data/db
@@ -16,7 +12,7 @@ services:
     networks:
       - ecommerce-network
     restart: unless-stopped
-    command: mongod --auth
+    command: mongod --noauth
 
 volumes:
   mongodb_data:
